# Proofgraph

./: .dockerignore  .env.example  .env.public.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  TASKS.md  compose.public.yaml  compose.yaml  demo-steps-v2.md  demo-steps.md  design.md  manage.py  pyproject.toml
docs/: devpost-submission.md  hackathon-video-2m45.md
docs/acceptance/: pg-029-local-production.md
evaluation/: README.md  scenarios.v1.json
proofgraph/: asgi.py  config.py  settings.py  urls.py
proofgraph/demo/: api.py  apps.py  authorization.py  cleanup.py  models.py  quotas.py  seed.py  services.py  (+1 more)
scripts/: initialize-public-env.ps1  run-evaluation-v2.ps1
tests/: test_config.py  test_demo_sessions.py  test_evaluation.py  test_generation_api.py  test_generation_context.py  test_generation_execution.py  test_generation_fixtures.py  test_generation_indexes.py  test_generation_pipeline_schemas.py  test_generation_profiles.py  test_generation_queue.py  test_generation_research.py  test_generation_schema.py  test_generation_sse.py  test_graph_api.py  test_graph_api_invariants.py  test_graph_indexes.py  test_graph_patch_api.py  test_graph_schema.py  test_graph_staleness.py  test_observability.py  test_phase_one_flow.py  test_phase_two_flow.py  test_regeneration_patch_application.py  test_runtime.py  test_secure_sources.py  test_security_hardening.py  test_source_ingestion.py  test_structured_providers.py
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  vite.config.ts
(+93 files in other folders)
