[project]
name = "proofgraph"
version = "0.1.0"
description = "Evidence-native opportunity canvas"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "Django>=5.2.12,<5.3",
    "pydantic>=2.11,<3",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.1,<2",
    "tldextract>=5,<6",
    "uvicorn[standard]>=0.35,<1",
    "openai>=2.0,<3",
    "whitenoise>=6.12,<7",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-django>=4.11,<5",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "proofgraph.settings"
addopts = "-ra"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "web"]

[tool.ruff.lint]
select = ["B", "DJ", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
